libcdi/src/cdi.h

/*      gridInqYlongname: Get the longname of a Y-axis */
void    gridInqYlongname(int gridID, char *ylongname);
/*      gridDefYunits: Define the units of a Y-axis */
void    gridDefYunits(int gridID, const char *yunits);
/*      gridInqYunits: Get the units of a Y-axis */
void    gridInqYunits(int gridID, char *yunits);
/*      gridInqXstdname: Get the standard name of a X-axis */
void    gridInqXstdname(int gridID, char *xstdname);
/*      gridInqYstdname: Get the standard name of a Y-axis */
void    gridInqYstdname(int gridID, char *ystdname);
/*      gridDefPrec: Define the precision of a Grid */
void    gridDefPrec(int gridID, int prec);
/*      gridInqPrec: Get the precision of a Grid */
int     gridInqPrec(int gridID);
/*      gridInqXval: Get one value of a X-axis */
double  gridInqXval(int gridID, int index);
/*      gridInqYval: Get one value of a Y-axis */
double  gridInqYval(int gridID, int index);
double  gridInqXinc(int gridID);
double  gridInqYinc(int gridID);
int     gridIsCircular(int gridID);
int     gridIsRotated(int gridID);
void    gridDefXpole(int gridID, double xpole);
double  gridInqXpole(int gridID);
void    gridDefYpole(int gridID, double ypole);
double  gridInqYpole(int gridID);
void    gridDefAngle(int gridID, double angle);
double  gridInqAngle(int gridID);
int     gridInqTrunc(int gridID);
void    gridDefTrunc(int gridID, int trunc);
/* Hexagonal GME grid */
void    gridDefGMEnd(int gridID, int nd);
int     gridInqGMEnd(int gridID);
void    gridDefGMEni(int gridID, int ni);
int     gridInqGMEni(int gridID);
void    gridDefGMEni2(int gridID, int ni2);
int     gridInqGMEni2(int gridID);
void    gridDefGMEni3(int gridID, int ni3);
int     gridInqGMEni3(int gridID);
/* Reference of an unstructured grid */

/*      gridDefNumber: Define the reference number for an unstructured grid */
void    gridDefNumber(int gridID, int number);
/*      gridInqNumber: Get the reference number to an unstructured grid */
int     gridInqNumber(int gridID);
/*      gridDefPosition: Define the position of grid in the reference file */
void    gridDefPosition(int gridID, int position);
/*      gridInqPosition: Get the position of grid in the reference file */
int     gridInqPosition(int gridID);
/*      gridDefReference: Define the reference URI for an unstructured grid */
void    gridDefReference(int gridID, const char *reference);
/*      gridInqReference: Get the reference URI to an unstructured grid */
int     gridInqReference(int gridID, char *reference);
/*      gridDefUUID: Define the UUID of an unstructured grid */
void    gridDefUUID(int gridID, const unsigned char uuid[CDI_UUID_SIZE]);
/*      gridInqUUID: Get the UUID of an unstructured grid */
void    gridInqUUID(int gridID, unsigned char uuid[CDI_UUID_SIZE]);
/* Lambert Conformal Conic grid (GRIB version) */
void gridDefLCC(int gridID, double originLon, double originLat, double lonParY, double lat1, double lat2, double xinc, double yinc, int projflag, int scanflag);
void gridInqLCC(int gridID, double *originLon, double *originLat, double *lonParY, double *lat1, double *lat2, double *xinc, double *yinc, int *projflag, int *scanflag);
/* Lambert Conformal Conic 2 grid (PROJ version) */
void gridDefLcc2(int gridID, double earth_radius, double lon_0, double lat_0, double lat_1, double lat_2);