libcdi/src/mo_cdi.f90

      interface
        subroutine gridInqYlongname(gridID,ylongname) bind(c,name='gridInqYlongname')
          import :: c_int,c_char
          integer(kind=c_int), value :: gridID
          character(kind=c_char), dimension(*) :: ylongname
        end subroutine gridInqYlongname
      end interface
      interface
        subroutine gridDefYunits(gridID,yunits) bind(c,name='gridDefYunits')
          import :: c_int,c_char
          integer(kind=c_int), value :: gridID
          character(kind=c_char), dimension(*) :: yunits
        end subroutine gridDefYunits
      end interface
      interface
        subroutine gridInqYunits(gridID,yunits) bind(c,name='gridInqYunits')
          import :: c_int,c_char
          integer(kind=c_int), value :: gridID
          character(kind=c_char), dimension(*) :: yunits
        end subroutine gridInqYunits
      end interface
      interface
        subroutine gridInqXstdname(gridID,xstdname) bind(c,name='gridInqXstdname')
          import :: c_int,c_char
          integer(kind=c_int), value :: gridID
          character(kind=c_char), dimension(*) :: xstdname
        end subroutine gridInqXstdname
      end interface
      interface
        subroutine gridInqYstdname(gridID,ystdname) bind(c,name='gridInqYstdname')
          import :: c_int,c_char
          integer(kind=c_int), value :: gridID
          character(kind=c_char), dimension(*) :: ystdname
        end subroutine gridInqYstdname
      end interface
      interface
        subroutine gridDefPrec(gridID,prec) bind(c,name='gridDefPrec')
          import :: c_int
          integer(kind=c_int), value :: gridID
          integer(kind=c_int), value :: prec
        end subroutine gridDefPrec
      end interface
      interface
        function gridInqPrec(gridID) bind(c,name='gridInqPrec')
          import :: c_int
          integer(kind=c_int), value :: gridID
          integer(kind=c_int) :: gridInqPrec
        end function gridInqPrec
      end interface
      interface
        function gridInqXval(gridID,index) bind(c,name='gridInqXval')
          import :: c_int,c_double
          integer(kind=c_int), value :: gridID
          integer(kind=c_int), value :: index
          real(kind=c_double) :: gridInqXval
        end function gridInqXval
      end interface
      interface
        function gridInqYval(gridID,index) bind(c,name='gridInqYval')
          import :: c_int,c_double
          integer(kind=c_int), value :: gridID
          integer(kind=c_int), value :: index
          real(kind=c_double) :: gridInqYval
        end function gridInqYval
      end interface
      interface
        function gridInqXinc(gridID) bind(c,name='gridInqXinc')
          import :: c_int,c_double
          integer(kind=c_int), value :: gridID
          real(kind=c_double) :: gridInqXinc
        end function gridInqXinc
      end interface
      interface
        function gridInqYinc(gridID) bind(c,name='gridInqYinc')
          import :: c_int,c_double
          integer(kind=c_int), value :: gridID
          real(kind=c_double) :: gridInqYinc
        end function gridInqYinc
      end interface
      interface
        function gridIsCircular(gridID) bind(c,name='gridIsCircular')
          import :: c_int
          integer(kind=c_int), value :: gridID
          integer(kind=c_int) :: gridIsCircular
        end function gridIsCircular
      end interface
      interface
        function gridIsRotated(gridID) bind(c,name='gridIsRotated')
          import :: c_int
          integer(kind=c_int), value :: gridID
          integer(kind=c_int) :: gridIsRotated
        end function gridIsRotated
      end interface
      interface
        subroutine gridDefXpole(gridID,xpole) bind(c,name='gridDefXpole')
          import :: c_int,c_double
          integer(kind=c_int), value :: gridID
          real(kind=c_double), value :: xpole
        end subroutine gridDefXpole
      end interface
      interface
        function gridInqXpole(gridID) bind(c,name='gridInqXpole')
          import :: c_int,c_double
          integer(kind=c_int), value :: gridID
          real(kind=c_double) :: gridInqXpole
        end function gridInqXpole
      end interface
      interface
        subroutine gridDefYpole(gridID,ypole) bind(c,name='gridDefYpole')
          import :: c_int,c_double
          integer(kind=c_int), value :: gridID
          real(kind=c_double), value :: ypole
        end subroutine gridDefYpole
      end interface
      interface
        function gridInqYpole(gridID) bind(c,name='gridInqYpole')
          import :: c_int,c_double
          integer(kind=c_int), value :: gridID
          real(kind=c_double) :: gridInqYpole
        end function gridInqYpole
      end interface
      interface
        subroutine gridDefAngle(gridID,angle) bind(c,name='gridDefAngle')
          import :: c_int,c_double
          integer(kind=c_int), value :: gridID
          real(kind=c_double), value :: angle
        end subroutine gridDefAngle
      end interface
      interface
        function gridInqAngle(gridID) bind(c,name='gridInqAngle')
          import :: c_int,c_double
          integer(kind=c_int), value :: gridID
          real(kind=c_double) :: gridInqAngle
        end function gridInqAngle
      end interface
      interface
        function gridInqTrunc(gridID) bind(c,name='gridInqTrunc')
          import :: c_int
          integer(kind=c_int), value :: gridID
          integer(kind=c_int) :: gridInqTrunc
        end function gridInqTrunc
      end interface
      interface
        subroutine gridDefTrunc(gridID,trunc) bind(c,name='gridDefTrunc')
          import :: c_int
          integer(kind=c_int), value :: gridID
          integer(kind=c_int), value :: trunc
        end subroutine gridDefTrunc
      end interface
      interface
        subroutine gridDefGMEnd(gridID,nd) bind(c,name='gridDefGMEnd')
          import :: c_int
          integer(kind=c_int), value :: gridID
          integer(kind=c_int), value :: nd
        end subroutine gridDefGMEnd
      end interface
      interface
        function gridInqGMEnd(gridID) bind(c,name='gridInqGMEnd')
          import :: c_int
          integer(kind=c_int), value :: gridID
          integer(kind=c_int) :: gridInqGMEnd
        end function gridInqGMEnd
      end interface
      interface
        subroutine gridDefGMEni(gridID,ni) bind(c,name='gridDefGMEni')
          import :: c_int
          integer(kind=c_int), value :: gridID
          integer(kind=c_int), value :: ni
        end subroutine gridDefGMEni
      end interface
      interface
        function gridInqGMEni(gridID) bind(c,name='gridInqGMEni')
          import :: c_int
          integer(kind=c_int), value :: gridID
          integer(kind=c_int) :: gridInqGMEni
        end function gridInqGMEni
      end interface
      interface
        subroutine gridDefGMEni2(gridID,ni2) bind(c,name='gridDefGMEni2')
          import :: c_int
          integer(kind=c_int), value :: gridID
          integer(kind=c_int), value :: ni2
        end subroutine gridDefGMEni2
      end interface
      interface
        function gridInqGMEni2(gridID) bind(c,name='gridInqGMEni2')
          import :: c_int
          integer(kind=c_int), value :: gridID
          integer(kind=c_int) :: gridInqGMEni2
        end function gridInqGMEni2
      end interface
      interface
        subroutine gridDefGMEni3(gridID,ni3) bind(c,name='gridDefGMEni3')
          import :: c_int
          integer(kind=c_int), value :: gridID
          integer(kind=c_int), value :: ni3
        end subroutine gridDefGMEni3
      end interface
      interface
        function gridInqGMEni3(gridID) bind(c,name='gridInqGMEni3')
          import :: c_int
          integer(kind=c_int), value :: gridID
          integer(kind=c_int) :: gridInqGMEni3
        end function gridInqGMEni3
      end interface
      interface
        subroutine gridDefNumber(gridID,number) bind(c,name='gridDefNumber')
          import :: c_int
          integer(kind=c_int), value :: gridID
          integer(kind=c_int), value :: number
        end subroutine gridDefNumber
      end interface
      interface
        function gridInqNumber(gridID) bind(c,name='gridInqNumber')
          import :: c_int
          integer(kind=c_int), value :: gridID
          integer(kind=c_int) :: gridInqNumber
        end function gridInqNumber
      end interface
      interface
        subroutine gridDefPosition(gridID,position) bind(c,name='gridDefPosition')
          import :: c_int
          integer(kind=c_int), value :: gridID
          integer(kind=c_int), value :: position
        end subroutine gridDefPosition
      end interface
      interface
        function gridInqPosition(gridID) bind(c,name='gridInqPosition')
          import :: c_int
          integer(kind=c_int), value :: gridID
          integer(kind=c_int) :: gridInqPosition
        end function gridInqPosition
      end interface
      interface
        subroutine gridDefReference(gridID,reference) bind(c,name='gridDefReference')
          import :: c_int,c_char
          integer(kind=c_int), value :: gridID
          character(kind=c_char), dimension(*) :: reference
        end subroutine gridDefReference
      end interface
      interface
        function gridInqReference(gridID,reference) bind(c,name='gridInqReference')
          import :: c_int,c_char
          integer(kind=c_int), value :: gridID
          character(kind=c_char), dimension(*) :: reference
          integer(kind=c_int) :: gridInqReference
        end function gridInqReference
      end interface
      interface
        subroutine gridDefUUID(gridID,uuid) bind(c,name='gridDefUUID')
          import :: c_int,c_char
          integer(kind=c_int), value :: gridID
          character(kind=c_char), dimension(16) :: uuid
        end subroutine gridDefUUID
      end interface
      interface
        subroutine gridInqUUID(gridID,uuid) bind(c,name='gridInqUUID')
          import :: c_int,c_char
          integer(kind=c_int), value :: gridID
          character(kind=c_char), dimension(16) :: uuid
        end subroutine gridInqUUID
      end interface
      interface
        subroutine gridDefLCC(gridID,originLon,originLat,lonParY,lat1,lat2,xinc,yinc,projflag,scanflag) bind(c,name='gridDefLCC')
          import :: c_int,c_double
          integer(kind=c_int), value :: gridID
          real(kind=c_double), value :: originLon
          real(kind=c_double), value :: originLat
          real(kind=c_double), value :: lonParY
          real(kind=c_double), value :: lat1
          real(kind=c_double), value :: lat2
          real(kind=c_double), value :: xinc
          real(kind=c_double), value :: yinc
          integer(kind=c_int), value :: projflag
          integer(kind=c_int), value :: scanflag
        end subroutine gridDefLCC
      end interface
      interface
        subroutine gridInqLCC(gridID,originLon,originLat,lonParY,lat1,lat2,xinc,yinc,projflag,scanflag) bind(c,name='gridInqLCC')
          import :: c_int,c_double
          integer(kind=c_int), value :: gridID
          real(kind=c_double), intent(out) :: originLon
          real(kind=c_double), intent(out) :: originLat
          real(kind=c_double), intent(out) :: lonParY
          real(kind=c_double), intent(out) :: lat1
          real(kind=c_double), intent(out) :: lat2
          real(kind=c_double), intent(out) :: xinc
          real(kind=c_double), intent(out) :: yinc
          integer(kind=c_int), intent(out) :: projflag
          integer(kind=c_int), intent(out) :: scanflag
        end subroutine gridInqLCC
      end interface
      interface
        subroutine gridDefLcc2(gridID,earth_radius,lon_0,lat_0,lat_1,lat_2) bind(c,name='gridDefLcc2')
          import :: c_int,c_double
          integer(kind=c_int), value :: gridID
          real(kind=c_double), value :: earth_radius
          real(kind=c_double), value :: lon_0
          real(kind=c_double), value :: lat_0
          real(kind=c_double), value :: lat_1
